archive/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: service
  namespace: monitoring
spec:
  selector:    
    component: uptime-kuma
  type: ClusterIP
  ports:  
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
