archive/uptime-kuma/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "no-store";
      add_header Pragma "no-cache";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-XSS-Protection "1; mode=block";    
  name: kuma-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
    - "uptime.${SECRET_DOMAIN}"
  rules:
  - host: "uptime.${SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 3001
